# Server

./: CMakeLists.txt  ReversiServer.cpp  ReversiServer.h  main.cpp
src/Server/: ClientsInformation.cpp  CloseCommand.cpp  CommandManager.cpp  GamesManager.cpp  JoinCommand.cpp  ListGamesCommand.cpp  NetworkGame.cpp  PlayCommand.cpp  ReversiServer.cpp  StartCommand.cpp  main.cpp
src/Server/include/: ClientsInformation.h  CloseCommand.h  Command.h  CommandsManager.h  GamesManager.h  JoinCommand.h  ListGamesCommand.h  NetworkGame.h  PlayCommand.h  ReversiServer.h  StartCommand.h
